11-kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wcg-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: word-cloud-generator
  template:
    metadata:
      labels:
        app: word-cloud-generator
    spec:
      containers:
        - name: wcg
          image: ghcr.io/skvorchevski/wcg:latest
          ports:
            - containerPort: 8888
